--- a/DesafioFullstackFrontend/Desafio-Fullstack/src/app/item-ui/item-ui.scss
+++ b/DesafioFullstackFrontend/Desafio-Fullstack/src/app/item-ui/item-ui.scss
@@ -1,19 +1,22 @@
 .items {
     background-color: #ffffff;
     box-shadow: 0 5px 15px -3px rgba(1, 122, 136, 0.1);
-    width: 50vw;
-    padding: 10px;
+    width: 45vw;
 }
 .items-infos {
     color: rgb(120, 172, 175);
     font-family: "Red Hat Display", sans-serif;
     font-size: 12px;
-    margin: 1vh 5vh 1vh 1vh;
+    margin: 1.5vh 1.5vh 0.5vh 1.5vh;
     text-align: justify;
+}
+.items-infos-span {
+    font-size: 10px;
 }
 .items-infos header {
     font-size: 12px;
     font-weight: 900;
+    margin-bottom: 0.5vh;
 }
 @media(max-width: 500px) {
     .items-itens {
